--- a/DataStructure.Core/MyQueue.csproj
+++ b/DataStructure.Core/MyQueue.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataStructure.Model\DataStructure.Model.csproj" />
+    <ProjectReference Include="..\DataStructure.Model\DataStructure.Base.csproj" />
   </ItemGroup>
 
 </Project>
