--- a/DataStructure/DataStructure.csproj
+++ b/DataStructure/DataStructure.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataStructure.Core\MyQueue.csproj" />
+    <ProjectReference Include="..\MyStack\MyStack.csproj" />
+  </ItemGroup>
+
 </Project>
