--- a/MyStack/MyStack.csproj
+++ b/MyStack/MyStack.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataStructure.Model\DataStructure.Base.csproj" />
+    <ProjectReference Include="..\DataStructure.Model\SinglyLinkedList.csproj" />
   </ItemGroup>
 
 </Project>
